# MODEL_PREDICTIVE_CONTROL

./: MAIN_MPC_car_lateral.py  README.md  calculus_sim_waterTanks_Kp_controller.py
mpc_bev_sim/: LICENSE  init.py  main_mpc_car.py  pyproject.toml  requirements.txt  support_files_car.py
